[gd_scene load_steps=5 format=3 uid="uid://caula3tjajdmm"]

[ext_resource type="Script" path="res://Codes/Settings menu.gd" id="1_ipy0g"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_slpb6"]
color = Color(0.184314, 0.184314, 0.184314, 1)
thickness = 20

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cxybq"]
color = Color(0.0470588, 0.717647, 1, 1)
thickness = 20

[sub_resource type="StyleBoxLine" id="StyleBoxLine_h04ce"]
color = Color(0.0470588, 0.717647, 1, 1)
thickness = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ipy0g")

[node name="Back" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 556.0
offset_right = 123.0
offset_bottom = 627.0

[node name="Button" type="Button" parent="Back"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="Music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 822.0
offset_top = 527.0
offset_right = 1105.0
offset_bottom = 658.0
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource("StyleBoxLine_slpb6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_cxybq")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_h04ce")
value = 75.0
scrollable = false
ticks_on_borders = true

[node name="Label" type="Label" parent="Music"]
layout_mode = 0
offset_left = 50.0
offset_top = -7.0
offset_right = 220.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 40
text = "Music"
horizontal_alignment = 1

[node name="Sound effects" type="HSlider" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 459.0
offset_right = 1110.0
offset_bottom = 555.0
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource("StyleBoxLine_slpb6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_cxybq")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_h04ce")
value = 75.0
scrollable = false
ticks_on_borders = true

[node name="Label" type="Label" parent="Sound effects"]
layout_mode = 0
offset_left = -9.0
offset_top = -17.0
offset_right = 293.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 40
text = "Sound effects"
horizontal_alignment = 1

[node name="Brightness" type="HSlider" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 342.0
offset_right = 1107.0
offset_bottom = 483.0
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource("StyleBoxLine_slpb6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_cxybq")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_h04ce")
min_value = 0.1
max_value = 4.0
value = 1.1
scrollable = false
ticks_on_borders = true

[node name="Label" type="Label" parent="Brightness"]
layout_mode = 0
offset_left = -4.0
offset_top = -2.0
offset_right = 298.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 40
text = "Brightness"
horizontal_alignment = 1

[node name="Invert" type="Button" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 165.0
offset_right = 209.0
offset_bottom = 222.0
toggle_mode = true
text = "Invert Mouse"

[node name="keybind" type="Button" parent="."]
layout_mode = 0
offset_left = 994.0
offset_top = 13.0
offset_right = 1121.0
offset_bottom = 65.0
text = "Keybinds"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 166.0
offset_right = 523.0
offset_bottom = 216.0
item_count = 3
selected = 1
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed (small)"
popup/item_1/id = 1
popup/item_2/text = "Windowed (Large)"
popup/item_2/id = 2

[connection signal="pressed" from="Back/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Sound effects" to="." method="_on_sound_effects_value_changed"]
[connection signal="value_changed" from="Brightness" to="." method="_on_brightness_value_changed"]
[connection signal="pressed" from="keybind" to="." method="_on_keybind_pressed"]
